codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__unified_exec_wait_before_streamed_agent_message.snap
---
source: tui/src/chatwidget/tests.rs
expression: combined
---
↳ 与后台终端交互 · cargo test -p codex-core
  └ （等待）

• Streaming response.
