codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__user_shell_ls_output.snap
---
source: tui/src/chatwidget/tests.rs
expression: blob
---
• 您运行的 ls
  └ file1
    file2
